--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
   <artifactId>joda-time</artifactId>
   <version>2.10.3</version>
      </dependency>
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.18</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
